# python-zencrc

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CHANGES.txt  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini  version.py
.github/workflows/: publish.yaml  test.yaml  version_up.yaml
tests/: README.md
tests/unit/: test_crc32.py  test_zencrc_cli.py
zencrc/: __init__.py  crc32.py  zencrc_cli.py
