[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zencrc"
version = "0.9.4"
description = "ZenCRC command-line tool for CRC32 stuff."
readme = "README.md"
authors = [
    {name = "Kavintha Kulasingham", email = "kmuthisha@gmail.com"},
]
license = {text = "GNU GPLv3"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.6"
dependencies = [
    "click",
]

[project.urls]
Homepage = "https://github.com/kazuma-desu/python-zencrc"
Issues = "https://github.com/kazuma-desu/python-zencrc/issues"

[project.scripts]
zencrc = "zencrc.zencrc_cli:main"

[tool.setuptools]
packages = ["zencrc"]
include-package-data = true
zip-safe = false
platforms = ["any"]
